# pyo3-arraylike

./: Cargo.toml  LICENSE  README.md
example/: Cargo.toml  example_calls.py  pyproject.toml
example/src/: lib.rs
example/src/example/: __init__.py  _core.pyi
src/: lib.rs  test.rs
tests/: array_like.rs
