[package]
name = "pyo3-arraylike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2.0.2"
ndarray = "0.15.6"
numpy = "0.19.0"

[dev-dependencies]
pyo3 = { version = "0.19", default-features = false, features = ["auto-initialize"] }
