[package]
name = "pyo3-arraylike"
version = "0.3.0"
edition = "2021"
authors = ["Erik Friese <e.friese0@gmail.com>"]
description = "Convenience extension for rust-numpy"
homepage = "https://github.com/124C41p/pyo3-arraylike"
repository = "https://github.com/124C41p/pyo3-arraylike"
categories = ["api-bindings", "development-tools::ffi"]
keywords = ["python", "numpy", "ffi", "pyo3", "ndarray"]
license = "MIT"
readme = "README.md"

[dependencies]
ndarray = ">= 0.13, < 0.18"
numpy = "^0.27"

[dev-dependencies]
pyo3 = { version = "^0.27", default-features = false, features = [
    "auto-initialize",
] }
